<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventForce</string>
    <string name="welcome_message">Welcome to EventForce</string>

    //Main Login Screen
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="create_account_button">Create Account</string>

    //Profile Selection
    <string name="select_profile">Select Profile</string>
    <string name="personal_use">Personal Use</string>
    <string name="student">Student/Education</string>
    <string name="welcome_to_personal_use_login">Welcome to Personal Use Login</string>
    <string name="welcome_to_student_login">Welcome to Student Login</string>

    //Account Creation
    <string name="create_student_account">Create New Student Account</string>
    <string name="create_personal_account">Create New Personal Account</string>
    <string name="email_hint">Email</string>
    <string name="return_to_login">Return to Login</string>
    <string name="create_student_account_button">Create New Student Account</string>
    <string name="create_personal_account_button">Create New Personal Account</string>

    //Event Display Screen
    <string name="your_events">Your Events</string>
    <string name="enter_event_name">Event Name</string>
    <string name="enter_event_date">Event Date</string>
    <string name="enter_event_time">Event Time</string>
    <string name="enter_event_description">Event Description</string>
    <string name="add_new_event">Add New Event</string>
    <string name="save_event">Save</string>
    <string name="edit_event">Edit</string>
    <string name="delete_event">Delete</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_description">Event Description</string>
    <string name="logout">Logout</string>

    //SMS Notifications Screen
    <string name="Send_SMS_Alert">Send SMS Alert</string>
    <string name="Input_Phone_Number">Input Phone Number</string>
    <string name="Send_SMS">Send SMS</string>
    <string name="Save_Number">Save Number</string>
</resources>
