<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/Send_SMS_Alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/Send_SMS_Alert" />

        <EditText
            android:id="@+id/Phone_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:hint="@string/Input_Phone_Number" />

        <Button
            android:id="@+id/Save_Number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Save_Number"
            android:backgroundTint="@color/blue" />


    </LinearLayout>

</androidx.cardview.widget.CardView>