<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral10"
    android:padding="16dp"
    tools:layout_editor_absoluteX="86dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/create_personal_account_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:text="@string/create_personal_account"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="12dp"
        android:autofillHints=""
        android:textColor="@android:color/white"
        android:textColorHint="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/create_personal_account_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:autofillHints=""
        android:textColor="@android:color/white"
        android:textColorHint="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:autofillHints=""
        android:textColor="@android:color/white"
        android:textColorHint="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:text="@string/create_account_button"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/return_to_login_button"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:text="@string/return_to_login"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/create_account_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
